# selenium_stepik

./: .gitignore  pyproject.toml  test.py
Chapter_1/: check_box.py  code_odessey.py  drop_down_lists.py  hunter.py  hunter2.py  main.py  mistery_trail.py
Chapter_2/: clear_list.py  color_code_of_hell.py  color_sync.py  junior_virtuoso.py  liberating_the_way.py  mine_field.py  odd_cookie_tracker.py  operation_checkbox.py  refresh.py  secret_cookie.py  undead_cookie.py
Chapter_2/constants/: const_for_junior_vortuoso.py
extensions/: coordinates.crx
