[tool.poetry]
name = "selenium_project"
version = "0.1.0"
description = ""
authors = ["Maxim Tsaregradtsev <3m3rcy3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
